2017-10-26  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.sh: Fix issues identified by Shellcheck.
	* testsuite/config-sub.sh: Likewise.

2017-09-26  Ben Elliston  <bje@gnu.org>

	* config.guess: Output a note that a C compiler may be needed when
	guessing fails on MIPS GNU/Linux systems.

2017-09-26  Ben Elliston  <bje@gnu.org>

	* config.guess (Local variables): Use 'write-file-functions
	instead of the deprecated 'write-file-hook (as of Emacs 22.1).
	* config.sub: Likewise.

2017-09-16  Paul Eggert  <eggert@cs.ucla.edu>

	Prefer https: to http: for gnu.org
	In Gnulib, Emacs, etc. we are changing ftp: and http: URLs to
	use https:, to help defend against man-in-the-middle attacks.
	Propagate these changes upstream to the config scripts.
	* config.guess, config.sub: Use https: URLs in diagnostics
	and in comments.

2017-09-15  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data (i386-windows): New test case.
	(x86_64-windows): Likewise.

2017-09-13  Ben Elliston  <bje@gnu.org>

	* config.sub (maybe_os): Add x64 alias for x86_64.

2017-09-12  Ben Elliston  <bje@gnu.org>

	* config.sub (maybe_os): Remove -windowsnt*.
	* config.guess (Alpha\ *:Windows_NT*:*): Remove obsolete case.
	(21064:Windows_NT:50:3): Likewise.
	(i*:windows32*:*): Likewise.
	([345]86:Windows_95:*, [345]86:Windows_98:*): Likewise.
	([345]86:Windows_NT:*): Likewise.
	(8664:Windows_NT:*): Likewise.
	(i*:Windows_NT*:* | Pentium*:Windows_NT*:*): Likewise.
	(p*:CYGWIN*:*): Likewise.
	* testsuite/config-guess.data: Remove relevant test cases.

2017-09-10  Ben Elliston  <bje@gnu.org>

	* config.sub: Improve comments.

2017-08-26  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.data: Sort.

2017-08-08  Ian Douglas Scott  <ian@iandouglasscott.com>
	    Ben Elliston  <bje@gnu.org>

	* config.guess (*:Redox:*:*): New.
	* testsuite/config-guess.data: Add a test case.

2017-07-19  Ben Elliston  <bje@gnu.org>

	* config.guess: Improve "outdated script" message.
